--- a/src/app/components/menu-vertical/menu-vertical.component.html
+++ b/src/app/components/menu-vertical/menu-vertical.component.html
@@ -5,7 +5,7 @@
     </div>-->
     <ul class="list-group" *ngIf="isLog">
       <li class="list-group-item raton-menu" routerLink="/acreedores">Acreedores</li>
-      <li class="list-group-item raton-menu" routerLink="/ordenes">Órdenes</li>
+      <li class="list-group-item raton-menu" routerLink="/vista-ordenes">Órdenes</li>
       <li class="list-group-item raton-menu" routerLink="/proyectos">Proyectos</li>
       <li class="list-group-item raton-menu" routerLink="/perfil">Perfil</li>
     </ul>
