--- a/src/app/components/vista-ordenes/add-orden/gastos/form-gastos.component.html
+++ b/src/app/components/vista-ordenes/add-orden/gastos/form-gastos.component.html
@@ -1,4 +1,3 @@
-
 <form>
 <!-- Entradas simples -->
     <div class="form-group">
@@ -30,18 +29,20 @@
         </select>
     </div>
 
-<!-- Area de texto (Comentarios)-->
-  <div class="form-group">
-    <label for="comentarios">Comentarios</label>
-    <textarea class="form-control" id="comentarios" rows="3" placeholder="Comentarios..."></textarea>
-  </div>
+
+    <!-- Area de texto (Comentarios)-->
+      <div class="form-group">
+        <label for="comentarios">Comentarios</label>
+        <textarea class="form-control" id="comentarios" rows="3" placeholder="Comentarios..."></textarea>
+      </div>
 
 
-  <div class="form-group">
-    <label for="imagen">    Imágenes</label>
-    <input type="file" class="form-control-file" id="imagen">
-  </div>
+      <div class="form-group">
+        <label for="imagen">    Imágenes</label>
+        <input type="file" class="form-control-file" id="imagen">
+      </div>
 
 
-  <button type="submit" class="btn btn-success">Crear Orden</button>
-</form>
+        <button type="submit" class="btn btn-success">Aceptar</button>
+        <button type="button" class="btn btn-danger">Cancelar</button>
+      </form>
