acreedores cambiado en vista ordenes

--- a/src/app/components/vista-ordenes/add-orden/add-orden.component.html
+++ b/src/app/components/vista-ordenes/add-orden/add-orden.component.html
@@ -1,3 +1,18 @@
+
+
+
+
+<!--Lista desplegable-->
+    <div class="form-group">
+      <br>
+        <select class="custom-select">
+          <option selected>Seleccione acreedor</option>
+          <option value="ac1">Acreedor 1</option>
+          <option value="ac2">Acreedor 2</option>
+          <option value="ac3">Acreedor 3</option>
+        </select>
+    </div>
+    
 <!--GASTOS-->
 <app-gastos></app-gastos>
 
