vista ordenes y servicios gasto y orden creado

--- a/src/app/components/vista-ordenes/add-orden/gastos/form-gastos/form-gastos.component.html
+++ b/src/app/components/vista-ordenes/add-orden/gastos/form-gastos/form-gastos.component.html
@@ -15,7 +15,7 @@
             <input type="text" class="form-control" id="iva" placeholder="IVA">
         </div>
     </div>
-
+  <br>
     <!-- Area de texto (Comentarios)-->
       <div class="form-group">
         <label for="comentarios">Comentarios</label>
@@ -28,7 +28,7 @@
         <input type="file" class="form-control-file" id="imagen">
       </div>
 
-
-        <button type="submit" class="btn btn-success">Aceptar</button>
-        <button type="button" class="btn btn-danger">Cancelar</button>
+    <br>
+        <button type="submit" class="btn btn-success">Aceptar</button>&nbsp;&nbsp;
+        <button class="btn btn-danger" role="button" (click)="cancelar()">Cancelar</button>
       </form>
