--- a/src/app/components/vista-ordenes/add-orden/gastos/gastos.component.html
+++ b/src/app/components/vista-ordenes/add-orden/gastos/gastos.component.html
@@ -2,18 +2,18 @@
     <h3 class="card-title text-center">Gastos</h3>
 
     <div class="my-3">
-      <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['/add-orden/gastos/form-gastos.component']">añadir gasto</button>
+      <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['/add-orden/gastos/form-gastos/form-gastos.component']">añadir gasto</button>
     </div>
 
 <!--TABLA GASTOS-->
     <table class="table table-bordered table-striped text-center">
       <thead class="thead-dark">
         <tr>
-          <th>Nombre</th>
-          <th>Nif</th>
-          <th>Iban</th>
-          <th>Editar</th>
-          <th>Borrar</th>
+          <th>Tipo</th>
+          <th>Importe</th>
+          <th>Iva</th>
+          <th>Ver</th>
+          <th>Eliminar</th>
         </tr>
       </thead>
 
