--- a/src/app/components/vista-ordenes/vista-ordenes.component.html
+++ b/src/app/components/vista-ordenes/vista-ordenes.component.html
@@ -1,5 +1,5 @@
 <div class="card-body text-secondary">
-    <h5 class="card-title">Listado de Órdenes</h5>
+    <h1 class="card-title text-center">Órdenes</h1>
     <div class="my-3">
       <button class="btn btn-rounded btn btn-success" types="button" [routerLink] = "['add-orden/add-orden.component']">Nueva Orden</button>
     </div>
