--- a/src/app/components/vista-ordenes/add-orden/add-orden.component.html
+++ b/src/app/components/vista-ordenes/add-orden/add-orden.component.html
@@ -1,7 +1,3 @@
-
-
-
-
 <!--Lista desplegable-->
     <div class="form-group">
       <br>
@@ -12,8 +8,8 @@
           <option value="ac3">Acreedor 3</option>
         </select>
     </div>
-    
+
 <!--GASTOS-->
-<app-gastos></app-gastos>
+<app-gastos></app-gastos><br><br><br>
 
 <button type="submit" class="btn btn-success">Crear Orden</button>
