--- a/src/app/components/vistaAcreedores/formAcreedores/form-acreedores.component.html
+++ b/src/app/components/vistaAcreedores/formAcreedores/form-acreedores.component.html
@@ -15,21 +15,33 @@
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="nombre">   Nombre</label>
-        <input type="text" class="form-control" [(ngModel)]="acreedor.nombre" id="nombre" placeholder="Nombre" name="nombre" maxLength="50">
+        <input type="text" class="form-control"formControlName="nombre" id="nombre" placeholder="Nombre" name="nombre" maxLength="50">
+        <div class="alerta">
+          <small *ngIf="!formValid && formAcreedores.get('nombre').hasError('required')">No puede estar vacio <br></small>         
+        </div>
       </div>
       <div class="form-group col-md-6">
         <label for="nif">   NIF</label>
-        <input type="text" class="form-control" [(ngModel)]="acreedor.nif" id="nif" placeholder="Nif" name="nif" *ngIf="!this.botonCrear else bloqueActualizarNif" maxLength="10">
+        <input type="text" class="form-control" formControlName="nif" id="nif" placeholder="Nif" name="nif" *ngIf="!this.botonCrear else bloqueActualizarNif" maxLength="10" pattern="(([X-Z]{1})([-]?)(\d{7})([-]?)([A-Z]{1}))|((\d{8})([-]?)([A-Z]{1}))">
         <ng-template #bloqueActualizarNif>
-          <input type="text" class="form-control" [(ngModel)]="acreedor.nif" id="nif" placeholder="{{acreedor.nif}}" name="nif"  disabled>
+          <input type="text" class="form-control" formControlName="nif" id="nif" placeholder="{{acreedor.nif}}" name="nif"  pattern="(([X-Z]{1})([-]?)(\d{7})([-]?)([A-Z]{1}))|((\d{8})([-]?)([A-Z]{1}))" disabled>
         </ng-template>
+        <div class="alerta">
+          <small *ngIf="!formValid && formAcreedores.get('nif').hasError('required')">No puede estar vacio <br></small>         
+          <small *ngIf="!formValid && formAcreedores.get('nif').hasError('pattern')">El formato introducido no es válido<br></small>         
+          <small *ngIf="!formValid && formAcreedores.get('nif').hasError('minlength')">El campo es demasiado corto<br></small>         
+        </div>
       </div>
     </div>
 
     <div class="form-row">
       <div class="form-group col-md-6">
         <label for="iban">IBAN</label>
-        <input type="text" class="form-control" [(ngModel)]="acreedor.iban" id="iban" placeholder="IBAN" name="iban" maxLength="34">
+        <input type="text" class="form-control" formControlName="iban" id="iban" placeholder="IBAN" name="iban" maxLength="34">
+        <div class="alerta">
+          <small *ngIf="!formValid && formAcreedores.get('iban').hasError('required')">No puede estar vacio <br></small>         
+          <small *ngIf="!formValid && formAcreedores.get('iban').hasError('minlength')">El campo es demasiado corto <br></small>         
+        </div>
       </div>
     </div>
 
@@ -42,57 +54,3 @@
   </form>
   </div>
 
-
-
-
-
-
-<!--<div class="card">
-  <div class="card bg-dark">
-    <div class="card-header text-white" *ngIf="!this.botonCrear else bloqueActualizar">
-      {{titulo}}
-    </div>
-
-    <ng-template #bloqueActualizar>
-      <div class="card-header text-white">
-        Editar Acreedor
-      </div>
-    </ng-template>
-  </div>
-
-  <form *ngIf= "acreedor" class="m-3">
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="nombre">   Nombre</label>
-        <input type="text" class="form-control" [(ngModel)]="acreedor.nombre" id="nombre" placeholder="Nombre" name="nombre">
-      </div>
-      <div class="form-group col-md-6">
-        <label for="nif">   NIF</label>
-        <input type="text" class="form-control" [(ngModel)]="acreedor.nif" id="nif" placeholder="NIF" name="nif" pattern="(([X-Z]{1})([-]?)(\d{7})([-]?)([A-Z]{1}))|((\d{8})([-]?)([A-Z]{1}))">
-        <div class="alert alert-danger" *ngIf="formAcreedores.get('nif').errors && formAcreedores.get('nif').dirty">
-          <p *ngIf="formAcreedores.get('nif').hasError('required')">DNI no puede estar vacio</p>
-          <p *ngIf="formAcreedores.get('nif').hasError('minlength')">Mínimo de 9 caracteres</p>
-          <p *ngIf="formAcreedores.get('nif').hasError('maxlength')">Máximo de 10 caracteres</p>
-          <p *ngIf="formAcreedores.get('nif').errors?.pattern">Formato erróneo</p>
-        </div>
-      </div>
-    </div>
-
-    <div class="form-row">
-      <div class="form-group col-md-6">
-        <label for="iban">IBAN</label>
-        <input type="text" class="form-control" [(ngModel)]="acreedor.iban" id="iban" placeholder="IBAN" name="iban">
-        <div class="alert alert-danger" *ngIf="formAcreedores.get('iban').errors && formAcreedores.get('iban').dirty">
-          <p *ngIf="formAcreedores.get('iban').hasError('required')">Nombre no puede estar vacio</p>
-          <p *ngIf="formAcreedores.get('iban').hasError('maxlength')">Debe tener 20 caracteres</p>
-          <p *ngIf="formAcreedores.get('iban').hasError('minlength')">Debe tener 20 caracteres</p>
-        </div>
-      </div>
-    </div>
-
-    <button class="btn btn-success" role="button" (click)="crearAcreedor()" *ngIf="!this.botonCrear else bloqueActualizar">Crear</button>
-    <ng-template #bloqueActualizar>
-      <button class="btn btn-success" role="button" (click)="actualizarAcreedor()">Editar</button>
-    </ng-template>
-  </form>
-  </div>-->
