--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -26,9 +26,9 @@
             </div>
             <input type="submit" class="input" value="Log in">
 
-            <a href="#">Forgot password?</a>
+            <a href="#">¿Has olvidado la contraseña?</a>
             <br>
-            <a routerLink="/registro">Don´t have an account?</a>
+            <a routerLink="/registro">¿No tienes cuenta? Registrate.</a>
         </form>
     </div>
 </body>
