--- a/src/app/components/vista-ordenes/add-orden/gastos/form-gastos/ver-gasto.component.html
+++ b/src/app/components/vista-ordenes/add-orden/gastos/form-gastos/ver-gasto.component.html
@@ -2,24 +2,24 @@
 <!-- Entradas simples -->
     <div class="form-group">
         <label for="desc">   Descripción</label>
-        <input type="text" class="form-control" [(ngModel)]="gasto.descripcion" id="desc" name="desc" placeholder="Descripción">
+        <input type="text" class="form-control" [(ngModel)]="gasto.descripcion" id="desc" name="desc" placeholder="Descripción" disabled>
     </div>
 
     <div class="form-row">
         <div class="col">
             <label for="importe">   Importe</label>
-            <input type="text" class="form-control" [(ngModel)]="gasto.importe" name="importe" id="importe" placeholder="Importe">
+            <input type="text" class="form-control" [(ngModel)]="gasto.importe" name="importe" id="importe" placeholder="Importe" disabled>
         </div>
         <div class="col">
             <label for="iva">   IVA</label>
-            <input type="text" class="form-control" [(ngModel)]="gasto.iva" name="iva" id="iva" placeholder="IVA">
+            <input type="text" class="form-control" [(ngModel)]="gasto.iva" name="iva" id="iva" placeholder="IVA" disabled>
         </div>
     </div>
   <br>
     <!-- Area de texto (Comentarios)-->
       <div class="form-group">
         <label for="comentarios">Comentarios</label>
-        <textarea class="form-control" id="comentarios" [(ngModel)]="gasto.comentarios" name="comentarios" rows="3" placeholder="Comentarios..."></textarea>
+        <textarea class="form-control" id="comentarios" [(ngModel)]="gasto.comentarios" name="comentarios" rows="3" placeholder="Comentarios..."disabled></textarea>
       </div>
 
       <div class="form-group">
@@ -32,6 +32,10 @@
             <option value="tg4">Tipo 4</option>
             <option value="tg5">Tipo 5</option>
           </select>
+
+          <!--<select class="custom-select" id="tipo" formControlName="tipo" name="tipo">
+            <option *ngFor="let usuario of usuarios_anadidos" value="{{usuario.dni}}">{{ usuario.nombre }} {{usuario.apellido1}} {{usuario.apellido2}} </option>
+          </select>-->
       </div>
 
       <div class="form-group">
@@ -40,6 +44,5 @@
       </div>
 
     <br>
-        <button role="button" class="btn btn-success" (click)="crearGasto()">Aceptar</button>&nbsp;&nbsp;
-        <button class="btn btn-danger" role="button" (click)="cancelar()">Cancelar</button>
+        <button class="btn btn-danger" role="button" (click)="cancelar()">Atrás</button>
       </form>
