--- a/src/app/components/perfil/perfil.component.css
+++ b/src/app/components/perfil/perfil.component.css
@@ -21,20 +21,9 @@
     margin-left: 35%;
 }*/
 
-#usuario{
-    width:70%;
-}
-
-#email{
-    width:60%;
-}
-
-#iban{
-    width:60%;
-}
-
-#pass{
-    width:60%;
+.icon{
+    width: 60%;
+    min-width: 16px;
 }
 
 .guardar{
