--- a/src/app/components/perfil/perfil.component.css
+++ b/src/app/components/perfil/perfil.component.css
@@ -24,10 +24,15 @@
 .icon{
     width: 60%;
     min-width: 16px;
+    max-width: 24px;
 }
 
-.guardar{
+
+
+#userIcon{
     width:60%;
+
+    min-width: 100px;
 }
 
 .alerta{
